Bug 365089 - k3b kf5 branch Invalid QUrl when burning iso
Summary: k3b kf5 branch Invalid QUrl when burning iso
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
: 364792 366565 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-05 06:16 UTC by Leslie Zhai
Modified: 2016-08-26 04:38 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leslie Zhai 2016-07-05 06:16:48 UTC
KF5: 5.23.0
Qt5: 5.7.0
gcc: 5.6.1

In the konsole, input ksb to run Ksb, then selected a iso image file, the "Burn Image" ImageWritingDialog shown, the console output:

OpenMode( "ReadOnly" )
Invalid URL: QUrl("the-image-path.iso")

and clicked the Start button of the dialog, the console output shown as below:

Invalid URL: QUrl("the-image-path.iso.000")
Invalid URL: QUrl("the-image-path.iso.001")
...
Invalid URL: QUrl("the-image-path.iso.101")
...

into Infinite loop, and progressBar was still 0%

Reproducible: Always

Steps to Reproduce:
1. open konsole, input ksb to run Ksb
2. select a iso image file, the "Burn Image" dialog show
3. click "Start" button

Actual Results:  
progressBar was still 0%

Expected Results:  
progressBar updated to show the percentage of Iso9660ImageWritingJob
Comment 1 Leslie Zhai 2016-07-08 01:30:47 UTC
Git commit fc4c54f7294293847c545e84090f2c0f66ad210b by Leslie Zhai.
Committed on 08/07/2016 at 01:28.
Pushed by lesliezhai into branch 'kf5'.

Fix imageFilesize QUrl and QString filePath wrong convertion issue.
REVIEW: 128376

M  +6    -12   libk3b/core/k3bglobals.cpp
M  +4    -4    libk3b/jobs/k3biso9660imagewritingjob.cpp
M  +1    -1    libk3b/tools/k3bmd5job.cpp

http://commits.kde.org/k3b/fc4c54f7294293847c545e84090f2c0f66ad210b
Comment 2 Leslie Zhai 2016-08-26 03:19:27 UTC
*** Bug 366565 has been marked as a duplicate of this bug. ***
Comment 3 Leslie Zhai 2016-08-26 04:38:43 UTC
*** Bug 364792 has been marked as a duplicate of this bug. ***