Fix imageFilesize QUrl and QString filePath wrong convertion issue.

BUG: 365089
REVIEW: 128376